WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163392
[SOUP] SHOULD NEVER BE REACHED ../../Source/WebCore/platform/URL.cpp(1291) : void WebCore::URL::parse(const WTF::String&)
https://bugs.webkit.org/show_bug.cgi?id=163392
Summary
[SOUP] SHOULD NEVER BE REACHED ../../Source/WebCore/platform/URL.cpp(1291) : ...
Michael Catanzaro
Reported
2016-10-13 09:48:03 PDT
Since URLParser was enabled, the network process crashes when loading any URL: SHOULD NEVER BE REACHED ../../Source/WebCore/platform/URL.cpp(1291) : void WebCore::URL::parse(const WTF::String&) 1 0x7f4e5f306696 /home/mcatanzaro/src/jhbuild/install/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7f4e5f306696] 2 0x7f4e666011db /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN7WebCore3URL5parseERKN3WTF6StringE+0x45) [0x7f4e666011db] 3 0x7f4e66e9fd7f /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN7WebCore3URLC2EP8_SoupURI+0x89) [0x7f4e66e9fd7f] 4 0x7f4e66e98cbd /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN7WebCore16ResourceResponse21updateFromSoupMessageEP12_SoupMessage+0x3b) [0x7f4e66e98cbd] 5 0x7f4e66e90eb1 /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(+0x698feb1) [0x7f4e66e90eb1] 6 0x7f4e577548f1 /home/mcatanzaro/src/jhbuild/install/lib/libgobject-2.0.so.0(g_cclosure_marshal_VOID__VOID+0xc2) [0x7f4e577548f1] 7 0x7f4e577518da /home/mcatanzaro/src/jhbuild/install/lib/libgobject-2.0.so.0(g_closure_invoke+0x18a) [0x7f4e577518da] 8 0x7f4e5776dcbe /home/mcatanzaro/src/jhbuild/install/lib/libgobject-2.0.so.0(+0x2ccbe) [0x7f4e5776dcbe] 9 0x7f4e5776d00c /home/mcatanzaro/src/jhbuild/install/lib/libgobject-2.0.so.0(g_signal_emit_valist+0x117b) [0x7f4e5776d00c] 10 0x7f4e5776d54e /home/mcatanzaro/src/jhbuild/install/lib/libgobject-2.0.so.0(g_signal_emit+0xa6) [0x7f4e5776d54e] 11 0x7f4e567438b4 /home/mcatanzaro/src/jhbuild/install/lib/libsoup-2.4.so.1(soup_message_got_headers+0x2a) [0x7f4e567438b4] 12 0x7f4e56749dcd /home/mcatanzaro/src/jhbuild/install/lib/libsoup-2.4.so.1(+0x7cdcd) [0x7f4e56749dcd] 13 0x7f4e5674a986 /home/mcatanzaro/src/jhbuild/install/lib/libsoup-2.4.so.1(+0x7d986) [0x7f4e5674a986] 14 0x7f4e5674aeff /home/mcatanzaro/src/jhbuild/install/lib/libsoup-2.4.so.1(+0x7deff) [0x7f4e5674aeff] 15 0x7f4e5675fd56 /home/mcatanzaro/src/jhbuild/install/lib/libsoup-2.4.so.1(+0x92d56) [0x7f4e5675fd56] 16 0x7f4e5675fd12 /home/mcatanzaro/src/jhbuild/install/lib/libsoup-2.4.so.1(+0x92d12) [0x7f4e5675fd12] 17 0x7f4e5674a202 /home/mcatanzaro/src/jhbuild/install/lib/libsoup-2.4.so.1(+0x7d202) [0x7f4e5674a202] 18 0x7f4e5746a1ee /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(+0x541ee) [0x7f4e5746a1ee] 19 0x7f4e5746b070 /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(g_main_context_dispatch+0x33) [0x7f4e5746b070] 20 0x7f4e5746b254 /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(+0x55254) [0x7f4e5746b254] 21 0x7f4e5746b67a /home/mcatanzaro/src/jhbuild/install/lib/libglib-2.0.so.0(g_main_loop_run+0x1d5) [0x7f4e5746b67a] 22 0x7f4e5f3692c4 /home/mcatanzaro/src/jhbuild/install/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7RunLoop3runEv+0xac) [0x7f4e5f3692c4] 23 0x7f4e6550ab74 /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit16ChildProcessMainINS_14NetworkProcessENS_20ChildProcessMainBaseEEEiiPPc+0x87) [0x7f4e6550ab74] 24 0x7f4e6550aadc /home/mcatanzaro/src/jhbuild/install/lib/libwebkit2gtk-4.0.so.37(NetworkProcessMainUnix+0x20) [0x7f4e6550aadc] 25 0x400c2a /home/mcatanzaro/src/jhbuild/install/libexec/webkit2gtk-4.0/WebKitNetworkProcess(main+0x34) [0x400c2a] 26 0x7f4e52431731 /lib64/libc.so.6(__libc_start_main+0xf1) [0x7f4e52431731] 27 0x400b29 /home/mcatanzaro/src/jhbuild/install/libexec/webkit2gtk-4.0/WebKitNetworkProcess(_start+0x29) [0x400b29]
Attachments
Patch
(1.57 KB, patch)
2016-10-13 09:59 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2016-10-13 09:57:51 PDT
Since URLParser is unconditionally enabled now, and all the non-URLParser codepaths are dead code, I suggest cleaning this up properly, but for now here is the fix to make soup ports work again.
Michael Catanzaro
Comment 2
2016-10-13 09:59:05 PDT
Created
attachment 291487
[details]
Patch
Alex Christensen
Comment 3
2016-10-13 10:17:44 PDT
Sorry about that :(
WebKit Commit Bot
Comment 4
2016-10-13 11:14:07 PDT
Comment on
attachment 291487
[details]
Patch Clearing flags on attachment: 291487 Committed
r207293
: <
http://trac.webkit.org/changeset/207293
>
WebKit Commit Bot
Comment 5
2016-10-13 11:14:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug