[SOUP] SHOULD NEVER BE REACHED ../../Source/WebCore/platform/URL.cpp(1291) : void WebCore::URL::parse(const WTF::String&) https://bugs.webkit.org/show_bug.cgi?id=163392

Reviewed by Alex Christensen.

Fix the URL constructor to work with URLParser.

* platform/soup/URLSoup.cpp:
(WebCore::URL::URL):


Canonical link: https://commits.webkit.org/181218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207293 268f45cc-cd09-0410-ab3c-d52691b4dbfc